--- a/HotelApIResult/Views/Shared/_Layout.cshtml
+++ b/HotelApIResult/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("HotelResults", "HotelResults", "Home")</li>
+                    <li>@Html.ActionLink("HotelInfos", "HotelInfos", "Home")</li>
                 </ul>
             </div>
         </div>
