--- a/HotelApIResult/Views/Shared/_Layout.cshtml
+++ b/HotelApIResult/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title @*- My ASP.NET Application*@</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -31,7 +31,8 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
+    </div>
+    <div class="modal-footer">
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
