--- a/HotelApIResult/Views/Shared/_Layout.cshtml
+++ b/HotelApIResult/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>@ViewBag.Title</title>
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -10,22 +10,37 @@
     <link rel="stylesheet" href="~/MyDesign/css/library/font-awesome.min.css">
     <link rel="stylesheet" href="~/MyDesign/css/library/bootstrap.min.css">
     <link rel="stylesheet" href="~/MyDesign/css/library/jquery-ui.min.css">
+    <link rel="stylesheet" href="~/MyDesign/css/library/magnific-popup.css">
     <link rel="stylesheet" href="~/MyDesign/css/library/owl.carousel.css">
     <link rel="stylesheet" href="~/MyDesign/css/library/jquery.mb.YTPlayer.min.css">
     <link rel="stylesheet" href="~/MyDesign/css/style.css">
     <script>
-!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,document,'script','../../../connect.facebook.net/en_US/fbevents.js');
+        !function (f, b, e, v, n, t, s) {
+            if (f.fbq) return; n = f.fbq = function () {
+                n.callMethod ?
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+            }; if (!f._fbq) f._fbq = n;
+            n.push = n; n.loaded = !0; n.version = '2.0'; n.queue = []; t = b.createElement(e); t.async = !0;
+            t.src = v; s = b.getElementsByTagName(e)[0]; s.parentNode.insertBefore(t, s)
+        }(window, document, 'script', '../../../connect.facebook.net/en_US/fbevents.js');
 
-fbq('init', '1031554816897182');
-fbq('track', "PageView");</script>
+        fbq('init', '1031554816897182');
+        fbq('track', "PageView");</script>
     <noscript>
         <img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1031554816897182&amp;ev=PageView&amp;noscript=1" />
     </noscript>
 </head>
 <body>
+    <header id="header" class="header">
+        <div class="container">
+            <div class="logo float-left">
+                <a href="@Url.Action("Index","Home")" title="">
+                    <img src="~/MyDesign/images/logo-header.png" alt="">
+                </a>
+            </div>
+            <div class="bars" id="bars"></div>
+        </div>
+    </header>
     @RenderBody()
     <footer>
         <div class="container">
@@ -102,14 +117,15 @@ fbq('track', "PageView");</script>
     <script type="text/javascript" src="~/MyDesign/js/library/jquery.nicescroll.js"></script>
     <script type="text/javascript" src="~/MyDesign/js/library/jquery.ui.touch-punch.min.js"></script>
     <script type="text/javascript" src="~/MyDesign/js/library/jquery.mb.YTPlayer.min.js"></script>
+    <script type="text/javascript" src="~/MyDesign/js/library/jquery.magnific-popup.js"></script>
     <script type="text/javascript" src="~/MyDesign/js/library/SmoothScroll.js"></script>
     <script type="text/javascript" src="~/MyDesign/js/script.js"></script>
     <script>
         (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', '../../../www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-20585382-5', 'megadrupal.com');
