--- a/HotelApIResult/Views/Shared/_Layout.cshtml
+++ b/HotelApIResult/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         </div>
     </header>
     @RenderBody()
-    <footer>
+    <footer style="width:100%">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -103,7 +103,7 @@
                             </ul>
                         </div>
                     </div>
-                    <p class="copyright">© 2009 – 2014 Bookyourtrip™ All rights reserved.</p>
+                    <p class="copyright">&copy; @DateTime.Now.ToShortDateString() Pay2Cart-Hotel™ All rights reserved.</p>
                 </div>
             </div>
         </div>
