--- a/HotelApIResult/Views/Home/CancelationPolicy.cshtml
+++ b/HotelApIResult/Views/Home/CancelationPolicy.cshtml
@@ -1,18 +1,8 @@
 ﻿
 @{
-    
+    Layout = null;
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>CancelationPolicy</title>
-</head>
-<body style="background-color:aqua">
-    <div style="background-color:aqua;">
-       <span style="text-align:center"> @Request.QueryString["matter"].ToString()</span>
-    </div>
-</body>
-</html>
+<div style="background-color:white;height:200px">
+    <span style="text-align:center"> @Request.QueryString["matter"].ToString()</span>
+</div>
